# tesourofieis

./: .env.example  .gitignore  .gitmodules  .prettierignore  .vercelignore  CNAME  Dockerfile  Gemfile  Militia Sancti Michaeli.tex  README.md  _config.yml  adoracao.html  angelus.html  antifonas.html  app.js  app.json  appflow.config.json  astro.config.mjs  astro.config.ts  baptismo.html  biome.json  bun.lockb  capacitor.config.ts  catecismo.html  comumsantos.html  comunssantos.html  confirmacao.html  cover.html  eas.json  extremauncao.html  gen_static_data.sh  index.html  lefthook.yml  login.html  main.html  manifest.json  matrimonio.html  missa.html  missal (conflicted).html  missal.html  (+38 more)
.github/: FUNDING.yml  renovate.json
.netlify/: state.json
_data/: nav.yml
_includes/: footer.html  head.html  navbar.html  navbartop.html  pages_lists.html  scripts.html  teste.html
_layouts/: default (conflicted).html  default.html
_site/: README.md  adoracao.html  antifonas.html  baptismo.html  comumsantos.html  confirmacao.html  cover.html  extremauncao.html  index.html  login.html  main.html  matrimonio.html  oficio.html  oracaoantescomunhao.html  oracaodepoiscomunhao.html  oracoescomplementares.html  oracoesdiversas.html  oracoesleoninas.html  ordinariomissa.html  package-lock.json  package.json  penitencia.html  propriosantos.html  propriotempo.html  registo.html  requiem.html  rosario.html  salterio.html
app/: package-lock.json  package.json  tsconfig.json
assets/: app.js  common.js  conf-static.js  cover.css  floating-labels.css  missa.css  nav.css  ordo.js  ordoReadings.js  proprium.js  readings.js  script.js  style.css
astro/: astro.config.mjs  package.json
data/: 2019  2019-01-01  2019-01-02  2019-01-03  2019-01-04  2019-01-05  (+694 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+14476 files in other folders)
