[package]
name = "app"
version = "0.1.6"
description = "Tesouro dos Fiéis"
authors = ["ofrades"]
license = "mit"
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.11", features = [] }


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.14", features = [] }
tauri-plugin-notification = "2.0.0-beta.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
