[package]
name = "app"
version = "0.1.7"
description = "Tesouro dos Fiéis"
authors = ["ofrades"]
license = "mit"
repository = ""
edition = "2021"
rust-version = "1.70"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.13", features = [] }


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.16", features = ["tray-icon"] }
tauri-plugin-notification = "2.0.0-beta.4"
tauri-plugin-deep-link = "0.1.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
